1.5/_sources/modules/generated/sklearn.naive_bayes.GaussianNB.rst.txt
GaussianNB
==========

.. currentmodule:: sklearn.naive_bayes

.. autoclass:: GaussianNB
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.naive_bayes.GaussianNB sklearn.naive_bayes.GaussianNB.__init__ sklearn.naive_bayes.GaussianNB.fit sklearn.naive_bayes.GaussianNB.get_metadata_routing sklearn.naive_bayes.GaussianNB.get_params sklearn.naive_bayes.GaussianNB.partial_fit sklearn.naive_bayes.GaussianNB.predict sklearn.naive_bayes.GaussianNB.predict_joint_log_proba sklearn.naive_bayes.GaussianNB.predict_log_proba sklearn.naive_bayes.GaussianNB.predict_proba sklearn.naive_bayes.GaussianNB.score sklearn.naive_bayes.GaussianNB.set_fit_request sklearn.naive_bayes.GaussianNB.set_params sklearn.naive_bayes.GaussianNB.set_partial_fit_request sklearn.naive_bayes.GaussianNB.set_score_request 
   :add-heading: Gallery examples
   :heading-level: -