1.7/_sources/modules/generated/sklearn.naive_bayes.GaussianNB.rst.txt
GaussianNB
==========

.. currentmodule:: sklearn.naive_bayes

.. autoclass:: GaussianNB
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.naive_bayes.GaussianNB sklearn.naive_bayes.GaussianNB.__delattr__ sklearn.naive_bayes.GaussianNB.__dir__ sklearn.naive_bayes.GaussianNB.__eq__ sklearn.naive_bayes.GaussianNB.__format__ sklearn.naive_bayes.GaussianNB.__ge__ sklearn.naive_bayes.GaussianNB.__getattribute__ sklearn.naive_bayes.GaussianNB.__getstate__ sklearn.naive_bayes.GaussianNB.__gt__ sklearn.naive_bayes.GaussianNB.__hash__ sklearn.naive_bayes.GaussianNB.__init__ sklearn.naive_bayes.GaussianNB.__init_subclass__ sklearn.naive_bayes.GaussianNB.__le__ sklearn.naive_bayes.GaussianNB.__lt__ sklearn.naive_bayes.GaussianNB.__ne__ sklearn.naive_bayes.GaussianNB.__new__ sklearn.naive_bayes.GaussianNB.__reduce__ sklearn.naive_bayes.GaussianNB.__reduce_ex__ sklearn.naive_bayes.GaussianNB.__repr__ sklearn.naive_bayes.GaussianNB.__setattr__ sklearn.naive_bayes.GaussianNB.__setstate__ sklearn.naive_bayes.GaussianNB.__sizeof__ sklearn.naive_bayes.GaussianNB.__sklearn_clone__ sklearn.naive_bayes.GaussianNB.__sklearn_tags__ sklearn.naive_bayes.GaussianNB.__str__ sklearn.naive_bayes.GaussianNB.__subclasshook__ sklearn.naive_bayes.GaussianNB._build_request_for_signature sklearn.naive_bayes.GaussianNB._check_X sklearn.naive_bayes.GaussianNB._get_default_requests sklearn.naive_bayes.GaussianNB._get_doc_link sklearn.naive_bayes.GaussianNB._get_metadata_request sklearn.naive_bayes.GaussianNB._get_param_names sklearn.naive_bayes.GaussianNB._get_params_html sklearn.naive_bayes.GaussianNB._html_repr sklearn.naive_bayes.GaussianNB._joint_log_likelihood sklearn.naive_bayes.GaussianNB._partial_fit sklearn.naive_bayes.GaussianNB._repr_html_inner sklearn.naive_bayes.GaussianNB._repr_mimebundle_ sklearn.naive_bayes.GaussianNB._update_mean_variance sklearn.naive_bayes.GaussianNB._validate_params sklearn.naive_bayes.GaussianNB.fit sklearn.naive_bayes.GaussianNB.get_metadata_routing sklearn.naive_bayes.GaussianNB.get_params sklearn.naive_bayes.GaussianNB.partial_fit sklearn.naive_bayes.GaussianNB.predict sklearn.naive_bayes.GaussianNB.predict_joint_log_proba sklearn.naive_bayes.GaussianNB.predict_log_proba sklearn.naive_bayes.GaussianNB.predict_proba sklearn.naive_bayes.GaussianNB.score sklearn.naive_bayes.GaussianNB.set_fit_request sklearn.naive_bayes.GaussianNB.set_params sklearn.naive_bayes.GaussianNB.set_partial_fit_request sklearn.naive_bayes.GaussianNB.set_score_request 
   :add-heading: Gallery examples
   :heading-level: -